--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@
 
 
 #Unimportant Files 
-src\Google Forms\.clasp.json
-src\Google Forms\appsscript.json
-src\private_testing.js
+src/Google Forms/.clasp.json
+src/Google Forms/appsscript.json
+src/private_testing.js
